# job-finder

./: .gitignore  README.md  pyproject.toml
src/job_finder/: __init__.py  __main__.py  app.py  application_documents.py  job_provider.py  matching.py  models.py  resume_sources.py  saved_jobs.py  workspace.py
tests/: test_app_config.py  test_application_documents.py  test_job_provider.py  test_matching.py  test_playwright_ui.py  test_resume_sources.py  test_saved_jobs.py  test_service.py  test_workspace.py
