[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "job-finder"
version = "0.1.0"
description = "Local Gradio app for matching resumes to relevant job postings."
readme = "README.md"
requires-python = ">=3.11"
scripts = { job-finder = "job_finder.__main__:main" }
dependencies = [
  "gradio>=5.22.0,<6",
  "httpx>=0.27.0,<1",
  "openai>=1.68.0,<2",
  "pydantic>=2.10.0,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/job_finder"]
